--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=henclewood-mck_test_pilot
 sonar.organization=henclewood-mck
+sonar.language=java
 sonar.java.binaries=./target/classes
 
 # This is the name and version displayed in the SonarCloud UI.
