--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=henclewood-mck_test_pilot
 sonar.organization=henclewood-mck
 sonar.language=java
-sonar.java.binaries=target
+sonar.java.binaries=.
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=test_pilot
