--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=henclewood-mck_test_pilot
 sonar.organization=henclewood-mck
 sonar.language=java
 sonar.java.binaries=.
-sonar.sources=.\src
+sonar.sources=./src
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=test_pilot
