--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,10 @@ sonar.organization=henclewood-mck
 sonar.language=java
 sonar.java.binaries=.
 sonar.sources=src/
+sonar.test=*Test.java
+sonar.exclusions=*Test.java
+sonar.junit.reportPaths=.
+sonar.jacoco.reportPaths =.
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=test_pilot
