add tests = junit parameters to sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,7 @@ sonar.language=java
 sonar.java.binaries=.
 sonar.sources=src/
 sonar.test=*Test.java
+sonar.tests=junit
 sonar.exclusions=*Test.java
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
