update sonar properties for testing

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,10 +2,10 @@ sonar.projectKey=henclewood-mck_test_pilot
 sonar.organization=henclewood-mck
 sonar.language=java
 sonar.java.binaries=.
-sonar.sources=src/
-sonar.test=*Test.java
-sonar.tests=junit
-sonar.exclusions=*Test.java
+sonar.sources=src
+sonar.test=src/*Test.java
+sonar.tests=src
+sonar.exclusions=src/*Test.java
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
 
