update sonar properties for testing

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.language=java
 sonar.java.binaries=.
 sonar.sources=src
 sonar.test=src/*Test.java
-sonar.tests=src
+#sonar.tests=src
 sonar.exclusions=src/*Test.java
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
