--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,7 @@ sonar.test=src/*Test.java
 sonar.exclusions=src/*Test.java
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
+sonar.java.libraries = lib
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=test_pilot
