redefine test source

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,12 +3,13 @@ sonar.organization=henclewood-mck
 sonar.language=java
 sonar.java.binaries=.
 sonar.sources=src
-sonar.test=src/*Test.java
+sonar.tests=src/test
 #sonar.tests=src
-sonar.exclusions=src/*Test.java
+sonar.exclusions=src/test
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
-sonar.java.libraries = lib
+#sonar.java.libraries= lib
+sonar.verbose= True
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=test_pilot
