--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.java.binaries=.
 sonar.sources=src
 sonar.tests=src/test
 #sonar.tests=src
-#sonar.exclusions=src/test
+sonar.exclusions=src/test/*TesT.java
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
 #sonar.java.libraries= lib
