restructure test folders

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=henclewood-mck
 sonar.language=java
 sonar.java.binaries=.
 sonar.sources=src
-sonar.tests=src/test
+sonar.tests=test
 #sonar.tests=src
 #sonar.exclusions=src/test/*TesT.java
 sonar.junit.reportPaths=.
