--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
 sonar.projectKey=henclewood-mck_test_pilot
 sonar.organization=henclewood-mck
 sonar.language=java
-sonar.java.binaries=.
+sonar.java.binaries= lib
 sonar.sources=src
 sonar.tests=test
 #sonar.tests=src
-#sonar.exclusions=src/test/*TesT.java
+sonar.exclusions=test
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
 #sonar.java.libraries= lib
