--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,14 @@
 sonar.projectKey=henclewood-mck_test_pilot
 sonar.organization=henclewood-mck
 sonar.language=java
-sonar.java.binaries= lib
+#sonar.java.binaries=lib
 sonar.sources=src
 sonar.tests=test
-#sonar.tests=src
+sonar.test=test
 sonar.exclusions=test
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
-#sonar.java.libraries= lib
+sonar.java.libraries= lib
 sonar.verbose= True
 
 # This is the name and version displayed in the SonarCloud UI.
