--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=henclewood-mck_test_pilot
 sonar.organization=henclewood-mck
 sonar.language=java
-#sonar.java.binaries=lib
+sonar.java.binaries=lib
 sonar.sources=src
 #sonar.tests=test
 sonar.test=test
