--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,13 +3,14 @@ sonar.organization=henclewood-mck
 sonar.language=java
 sonar.java.binaries=lib
 sonar.sources=src
-#sonar.tests=test
+sonar.tests=test
 sonar.test=test
 sonar.exclusions=test
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
 #sonar.java.libraries= lib
 sonar.verbose= True
+sonar.coverage.jacoco.xmlReportPaths=.
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=test_pilot
