--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,8 +8,8 @@ sonar.test=test
 sonar.exclusions=test
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
-#sonar.java.libraries= lib
-sonar.verbose= True
+sonar.java.libraries=lib
+sonar.verbose=True
 sonar.coverage.jacoco.xmlReportPaths=.
 
 # This is the name and version displayed in the SonarCloud UI.
