--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,8 +5,8 @@ sonar.java.binaries=lib
 sonar.sources=src
 sonar.test=test
 sonar.verbose=True
+sonar.exclusions=test
 #sonar.tests=test
-#sonar.exclusions=test
 #sonar.junit.reportPaths=.
 #sonar.jacoco.reportPaths =.
 #sonar.java.libraries=lib
