--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,10 +2,10 @@ sonar.projectKey=henclewood-mck_test_pilot
 sonar.organization=henclewood-mck
 sonar.language=java
 sonar.java.binaries=lib
-sonar.sources=src
+sonar.sources=src, test
 sonar.test=test
 sonar.verbose=True
-sonar.exclusions=test
+#sonar.exclusions=test
 #sonar.tests=test
 #sonar.junit.reportPaths=.
 #sonar.jacoco.reportPaths =.
