--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,10 +3,10 @@ sonar.organization=henclewood-mck
 sonar.language=java
 sonar.java.binaries=lib
 sonar.sources=src, test
-sonar.test=test
+#sonar.test=test
 sonar.verbose=True
 #sonar.exclusions=test
-#sonar.tests=test
+sonar.tests=test
 #sonar.junit.reportPaths=.
 #sonar.jacoco.reportPaths =.
 #sonar.java.libraries=lib
