--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=henclewood-mck_test_pilot
 sonar.organization=henclewood-mck
 sonar.language=java
 sonar.java.binaries=lib
-sonar.sources=src, test
+sonar.sources=src
 #sonar.test=test
 sonar.verbose=True
 #sonar.exclusions=test
