--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,6 +11,7 @@ sonar.tests=test
 #sonar.jacoco.reportPaths =.
 #sonar.java.libraries=lib
 #sonar.coverage.jacoco.xmlReportPaths=.
+sonar.java.test.libraries=lib
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=test_pilot
