--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=henclewood-mck_test_pilot
 sonar.organization=henclewood-mck
 sonar.language=java
-sonar.java.binaries=lib
+#sonar.java.binaries=
 sonar.sources=src
 #sonar.test=test
 sonar.verbose=True
@@ -9,7 +9,7 @@ sonar.verbose=True
 sonar.tests=test
 #sonar.junit.reportPaths=.
 #sonar.jacoco.reportPaths =.
-#sonar.java.libraries=lib
+sonar.java.libraries=
 #sonar.coverage.jacoco.xmlReportPaths=.
 sonar.java.test.libraries=lib
 
