--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=henclewood-mck_test_pilot
 sonar.organization=henclewood-mck
 sonar.language=java
-#sonar.java.binaries=
+sonar.java.binaries=.
 sonar.sources=src
 #sonar.test=test
 sonar.verbose=True
