--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,6 +12,7 @@ sonar.tests=test
 sonar.java.libraries=
 #sonar.coverage.jacoco.xmlReportPaths=.
 sonar.java.test.libraries=lib
+#sonar.java.binaries=./target/classes
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=test_pilot
