--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.java.binaries=.
 sonar.sources=src
 #sonar.test=test
 sonar.verbose=True
-#sonar.exclusions=test
+sonar.exclusions=test
 sonar.tests=test
 #sonar.junit.reportPaths=.
 #sonar.jacoco.reportPaths =.
