--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,15 +3,15 @@ sonar.organization=henclewood-mck
 sonar.language=java
 sonar.java.binaries=.
 sonar.sources=src
-#sonar.test=test
+sonar.test=test
 sonar.verbose=True
 sonar.exclusions=test
-sonar.tests=test
-#sonar.junit.reportPaths=.
-#sonar.jacoco.reportPaths =.
-sonar.java.libraries=
+#sonar.tests=test
+sonar.junit.reportPaths=.
+sonar.jacoco.reportPaths =.
+sonar.java.libraries=lib
 #sonar.coverage.jacoco.xmlReportPaths=.
-sonar.java.test.libraries=lib
+#sonar.java.test.libraries=lib
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=test_pilot
