include sonar.tests=test

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,10 +3,10 @@ sonar.organization=henclewood-mck
 sonar.language=java
 sonar.java.binaries=.
 sonar.sources=src
-sonar.test=test
+#sonar.test=test
 sonar.verbose=True
 sonar.exclusions=test
-#sonar.tests=test
+sonar.tests=test
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
 sonar.java.libraries=lib
