--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
 sonar.java.libraries=lib
 #sonar.coverage.jacoco.xmlReportPaths=.
-#sonar.java.test.libraries=lib
+sonar.java.test.libraries=lib
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=test_pilot
