sonar.tests=test\*Test.java

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.sources=src
 #sonar.test=test
 sonar.verbose=True
 sonar.exclusions=test
-sonar.tests=test
+sonar.tests=test\*Test.java
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
 sonar.java.libraries=lib
