--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.java.binaries=.
 sonar.sources=src
 sonar.test=test\*Test.java
 sonar.verbose=True
-sonar.exclusions=test
+#sonar.exclusions=test
 #sonar.tests=test\*Test.java
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
