--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,10 +3,10 @@ sonar.organization=henclewood-mck
 sonar.language=java
 sonar.java.binaries=.
 sonar.sources=src
-sonar.test=test\*Test.java
+#sonar.test=test\*Test.java
 sonar.verbose=True
-#sonar.exclusions=test
-#sonar.tests=test\*Test.java
+sonar.exclusions=test
+sonar.tests=test
 sonar.junit.reportPaths=.
 sonar.jacoco.reportPaths =.
 sonar.java.libraries=lib
